--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,22 @@
 {
-  "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"],
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "lib": ["ESNext", "DOM"],
-    "jsx": "preserve",
-    "esModuleInterop": true,
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "types": ["@types/node", "@nuxt/types"],
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["./*"],
-      "@/*": ["./*"]
-    }
-  },
+  // "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"],
+  // "compilerOptions": {
+  //   "target": "ESNext",
+  //   "module": "ESNext",
+  //   "moduleResolution": "Node",
+  //   "lib": ["ESNext", "DOM"],
+  //   "jsx": "preserve",
+  //   "esModuleInterop": true,
+  //   "allowJs": true,
+  //   "skipLibCheck": true,
+  //   "strict": true,
+  //   "types": ["@types/node", "@nuxt/types"],
+  //   "baseUrl": ".",
+  //   "paths": {
+  //     "~/*": ["./*"],
+  //     "@/*": ["./*"]
+  //   }
+  // },
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json"
 }
