--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "nuxt": "^3.12.3",
     "vue": "latest"
   },
