--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "nuxt": "^3.12.3",
+    "nuxt-socket-io": "^3.0.13",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "vue": "latest"
   },
   "devDependencies": {
