--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "typescript": "^5.5.3",
+    "vue-tsc": "^1.8.27"
+  },
+  "overrides": {
+    "glob": "9.0.0"
   }
 }
