--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "nuxt-socket-io": "^3.0.13",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "vue": "latest"
+    "vue": "latest",
+    "@nuxtjs/tailwindcss": "^6.12.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
-    "@nuxtjs/tailwindcss": "^6.12.0",
     "typescript": "^5.5.3",
     "vue-tsc": "^1.8.27"
   },
