--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
-    "typescript": "^5.5.3",
-    "vue-tsc": "^1.8.27"
+    "typescript": "^5.5.3"
   },
   "overrides": {
     "glob": "9.0.0"
