--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.17.0",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "nuxt": "^3.12.3",
-    "vue": "latest"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "vue": "latest",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/ws": "^8.5.10"
   }
 }
